--- a/tired-wire.csproj
+++ b/tired-wire.csproj
@@ -10,6 +10,8 @@
   <ItemGroup>
     <PackageReference Include="Apache.Avro" Version="1.12.0" />
     <PackageReference Include="MongoDB.Driver" Version="3.4.0" />
+    <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
+    <PackageReference Include="System.CommandLine.NamingConventionBinder" Version="2.0.0-beta4.22272.1" />
   </ItemGroup>
 
 </Project>
